# libaleios

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ae.hpp  game.cpp  game.hpp  logger.cpp  logger.hpp  window.cpp  window.hpp
src/dreamcast/: dreamcastwindow.cpp  dreamcastwindow.hpp
src/ecs/: component.hpp  entity.hpp  entitysystem.hpp  world.hpp
src/memory/: objectpool.hpp  ptrutils.hpp
src/renderer/: renderer.hpp
src/renderer/GLV1/glad/: glad.c
src/renderer/GLV1/glad/glad/: glad.h
src/sdl/: sdlwindow.cpp  sdlwindow.hpp
toolchains/: Dreamcast.cmake
